syntax = "proto3";

import "google/protobuf/empty.proto";

package pcmanagement;

option go_package = "github.com/ZidanHadipratama/UTS_Mochamad-Zidan-Hadipratama_5027221052";

// PRC for processor

// The PCService defines the gRPC service for managing PC hardware.
service PRCServices {
  rpc CreatePRC (PRC) returns (PRCResponse) {}
  rpc ReadPRC (PRCRequest) returns (PRC) {}
  rpc UpdatePRC (PRC) returns (PRCResponse) {}
  rpc DeletePRC (PRCRequest) returns (PRCResponse) {}
  rpc ListPRCs (google.protobuf.Empty) returns (ListPRCsResponse) {}
}

message PRC {
  int32 id = 1;
  string name = 2;
  string manufacturer = 3;
  int32 generation = 4; 
  int32 core = 5;
  int32 thread = 6;
}

message PRCRequest {
  int32 id = 1;
}

message PRCResponse {
  PRC prc = 1;
  string message = 2;
}

message ListPRCsResponse {
  repeated PRC prcs = 1;
}
